--- a/3rdparty/qtiocompressor/CMakeLists.txt
+++ b/3rdparty/qtiocompressor/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8.9)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
+
 
 set(IOCOMPRESSOR-SOURCES
     qtiocompressor.cpp
@@ -8,7 +12,6 @@ set(IOCOMPRESSOR-MOC-HEADERS
     qtiocompressor.h
 )
 
-QT4_WRAP_CPP(IOCOMPRESSOR-SOURCES-MOC ${IOCOMPRESSOR-MOC-HEADERS})
 
 ADD_LIBRARY(qtiocompressor STATIC
     ${IOCOMPRESSOR-SOURCES}
