--- a/3rdparty/qtiocompressor/CMakeLists.txt
+++ b/3rdparty/qtiocompressor/CMakeLists.txt
@@ -12,8 +12,10 @@ set(IOCOMPRESSOR-MOC-HEADERS
     qtiocompressor.h
 )
 
+QT5_WRAP_CPP(IOCOMPRESSOR-SOURCES-MOC ${IOCOMPRESSOR-MOC-HEADERS})
 
 ADD_LIBRARY(qtiocompressor STATIC
     ${IOCOMPRESSOR-SOURCES}
     ${IOCOMPRESSOR-SOURCES-MOC}
 )
+qt5_use_modules(qtiocompressor Core)
